--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p ${PORT:-3000}",
-    "lint": "next lint",
-    "postinstall": "npm run build",
-    "railway:setup": "node scripts/railway-setup.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.0.0",
